Fix backend issues: IndexOutOfBoundsException, ambiguous category handlers, file-based H2, Java 17 lock